--- a/themes/lx/_config.yml
+++ b/themes/lx/_config.yml
@@ -1,5 +1,6 @@
 ### Welcome to Hexo-Theme-Lx
 ###Author:blleng(https://github.com/blleng)
+###https://github.com/blleng/hexo-theme-lx
 ###Version:v0.3.9
 version: 0.3.9
 
@@ -17,12 +18,16 @@ avatar: images/avatar.jpeg
 
 ###The options below are images information
 # Home cover
-cover: //cdn.jsdelivr.net/npm/theme-lx@0.3.9/source/images/cover.jpeg
+cover: /images/blake-wheeler.jpg
+## cover: //cdn.jsdelivr.net/npm/theme-lx@0.3.9/source/images/cover.jpeg
 # page cover
-postcover: //cdn.jsdelivr.net/npm/theme-lx@0.3.9/source/images/post_cover.jpeg
+postcover: /images/mountain.jpg
+## postcover: //cdn.jsdelivr.net/npm/theme-lx@0.3.9/source/images/post_cover.jpeg
 # the cover of newer or older post
-pre_post: //cdn.jsdelivr.net/npm/theme-lx@0.3.9/source/images/footer-r.jpeg
-nex_post: //cdn.jsdelivr.net/npm/theme-lx@0.3.9/source/images/footer-l.jpeg
+pre_post: /images/mountain1.jpg
+## pre_post: //cdn.jsdelivr.net/npm/theme-lx@0.3.9/source/images/footer-r.jpeg
+nex_post: /images/mountain1.jpg
+## nex_post: //cdn.jsdelivr.net/npm/theme-lx@0.3.9/source/images/footer-l.jpeg
 
 # The theme of sidebar
 ##pure color：green,red,blue,bnp(bright neon pink),orange,black,pink,gol-b(golden brown),greenish(greenish blue)
