change images and fix css part

--- a/themes/lx/_config.yml
+++ b/themes/lx/_config.yml
@@ -24,9 +24,9 @@ cover: /images/blake-wheeler.jpg
 postcover: /images/mountain.jpg
 ## postcover: //cdn.jsdelivr.net/npm/theme-lx@0.3.9/source/images/post_cover.jpeg
 # the cover of newer or older post
-pre_post: /images/mountain1.jpg
+pre_post: /images/yellow拷貝.jpg
 ## pre_post: //cdn.jsdelivr.net/npm/theme-lx@0.3.9/source/images/footer-r.jpeg
-nex_post: /images/mountain1.jpg
+nex_post: /images/yellow拷貝.jpg
 ## nex_post: //cdn.jsdelivr.net/npm/theme-lx@0.3.9/source/images/footer-l.jpeg
 
 # The theme of sidebar
