--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,6 @@ theme: lx
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/Eva813/Eva813.github.io.git
+  repo: git@github.com:Eva813/Eva813.github.io.git
   branch: master
 
