fix:modify description

--- a/themes/tranquilpeak/_config.yml
+++ b/themes/tranquilpeak/_config.yml
@@ -116,7 +116,7 @@ header:
 
 # Your biography and your job is editable in each languages files in `languages` folder
 author:
-    email: 
+    email: as45986@gmail.com
     location:
     # Your profile picture located in folder `source/_images/` (development)
     # or in `source/assets/images/` (production)
