--- a/themes/claudia/_config.yml
+++ b/themes/claudia/_config.yml
@@ -24,7 +24,7 @@ user:
   name: Eva
   avatar: /images/eva-round.png
   location: 
-  description: 'Front-end Engineer'
+  description: 'Front-end Engineer email:as45986@gmail.com'
   footnotes: # footnotes
 
 # documents: https://github.com/utterance/utterances
