--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "4.2.1"
+    "version": "7.0.0"
   },
   "dependencies": {
-    "hexo": "^4.2.1",
+    "hexo": "^7.0.0",
     "hexo-algoliasearch": "^1.0.0",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
@@ -25,6 +25,7 @@
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-pug": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
-    "hexo-server": "^1.0.0"
+    "hexo-server": "^1.0.0",
+    "highlight.js": "^11.9.0"
   }
 }
