--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Let's Code
+title: Let's Coding
 subtitle: ""
 description: ""
 keywords:
