--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ""
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://github.com/Eva813/Eva813.github.io.git
+url: https://eva813.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
