feat: update site configuration to include keywords and description

--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 # Site
 title: Let's Coding
-subtitle: ""
-description: ""
-keywords:
+subtitle: 
+description: 
+keywords: "Frontend Development, JavaScript, Python, Algorithms, Programming Tutorials, Tech Blog, Web Development"
 author: Eva Chan
 language: en
 timezone: ""
